fixed the transient  variables